# plexus

./: .dockerignore  .gitignore  .impeccable.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  LICENSE  M4-DEMO.md  README.md  START-HERE.md  bunfig.toml  package.json  run-tests.sh  tsconfig.json
docker/: Dockerfile  Dockerfile.appliance  Dockerfile.appliance.dockerignore  Dockerfile.dockerignore  compose.mesh.yml
docs/: GETTING-STARTED-macos.md  KNOWN-LIMITATIONS.md  README.md  concepts.md  deploy-linux.md  extension-authoring.md  getting-started.md  security.md
examples/: README.md
examples/agent-view/backend/: agent_runner.py  demo_mode.py  events.py  pyproject.toml  requirements.txt  server.py
examples/agent-view/backend/recordings/: demo-cc-codex.json
integrations/: README.md
management-client/: package.json
site/: .gitignore  index.md  package.json
src/: config.ts  index.ts
tests/: a3-admin-connect-agent.test.ts  acceptance-apple-e2e.test.ts  acceptance-e2e.test.ts  adapter-mcp.test.ts  adapter-source.test.ts  adapter-transports.test.ts  adapter-workflow.test.ts  admin-extensions.test.ts  admin-route.test.ts  agent-enrollment.test.ts  agent-harness-loop.test.ts  agents-enrollments-endpoint.test.ts  apple-calendar-reader.test.ts  apple-calendar-source.test.ts  apple-contacts-source.test.ts  apple-mail-source.test.ts  apple-notes-source.test.ts  apple-photos-source.test.ts  apple-reminders-real-provider.test.ts  apple-reminders-source.test.ts  appliance-default-deny.test.ts  appliance-manifest.test.ts  audit-io-capture.test.ts  authz-subset.test.ts  (+117 more)
(+359 files in other folders)
